Adding API to forward the logs to remote machines
